[tool.poetry]
name = "gcs-test"
version = "0.1.0"
description = ""
authors = ["Ganesh Tiwari <ganesht049@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gcs_test"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "gcs_test.main:main"
